feat : finese changes

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,19 +2,19 @@
     border: none;
     border-radius: 4px;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: "Roboto Mono Medium", Helvetica, Arial, sans-serif;
+    font-family:"Arimo Nerd Font", "LiterationSans Nerd Font", Arial, sans-serif;
     /* Recommended font sizes: 720p: ~14px, 1080p: ~18px */
-    font-size: 20px;
+    font-weight: 600;
+    font-size: 16px;
     min-height: 0;
 }
-
 window#waybar {
     background-color: rgba(50, 50, 50, 0.9);
-    border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+    border-bottom: 1px solid rgba(100, 114, 125, 0.5);
     color: #ffffff;
     transition-property: background-color;
     transition-duration: .5s;
-    border-radius: 0;
+    border-radius: 0px;
 }
 
 window#waybar.hidden {
@@ -50,12 +50,13 @@ window#waybar.chromium {
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 #workspaces button:hover {
     background: rgba(0, 0, 0, 0.2);
-    box-shadow: inset 0 -3px #ffffff;
+    box-shadow: inset 0 -1px #ffffff;
 }
 
-#workspaces button.occupied {
-    background-color: #64727D;
-    box-shadow: inset 0 -3px #ffffff;
+#workspaces button.active {
+    color: #333333;
+    background-color: #bbccdd;
+    box-shadow: inset 0 -1px #ffffff;
 }
 
 #workspaces button.urgent {
@@ -64,7 +65,7 @@ window#waybar.chromium {
 
 #mode {
     background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
+    border-bottom: 1px solid #ffffff;
 }
 
 #clock,
@@ -81,11 +82,13 @@ window#waybar.chromium {
 #idle_inhibitor,
 #mpd {
     padding: 0 10px;
-    margin: 6px 3px; 
+    margin: 4px 3px; 
     color: #333333;
 }
 
-#window,
+#window {
+    font-weight: 500;
+}
 #workspaces {
     margin: 0 4px;
 }
@@ -193,7 +196,7 @@ label:focus {
 }
 
 #idle_inhibitor {
-    background-color: #2d3436;
+    background-color: #bbccdd;
 }
 
 #idle_inhibitor.activated {
