--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,9 +2,9 @@
     border: none;
     border-radius: 4px;
     /* `otf-font-awesome` is required to be installed for icons */
-    font-family: "Arimo Nerd Font", "LiterationSans Nerd Font", Arial, sans-serif;
+    font-family: "Ubuntu Nerd Font Propo", "Arimo Nerd Font", "LiterationSans Nerd Font", Arial, sans-serif;
     /* Recommended font sizes: 720p: ~14px, 1080p: ~18px */
-    font-weight: 600;
+    font-weight: 500;
     font-size: 15px;
     min-height: 0;
 }
@@ -54,7 +54,7 @@ window#waybar.chromium {
     box-shadow: inset 0 -1px #ffffff;
 }
 
-#workspaces button.active {
+#workspaces button.focused {
     color: #333333;
     background-color: #bbccdd;
     box-shadow: inset 0 -1px #ffffff;
